--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,30 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+title = "GuldGlenn"
+baseURL = "https://example.com"
+languageCode = "da-dk"
+theme = "gohugo-theme-ananke"
+
+MetaDataFormat = "yaml"
+DefaultContentLanguage = "da"
+SectionPagesMenu = "main"
+Paginate = 3 # this is set low for demonstrating with dummy content. Set to a higher number
+googleAnalytics = ""
+enableRobotsTXT = true
+
+[sitemap]
+  changefreq = "monthly"
+  priority = 0.5
+  filename = "sitemap.xml"
+
+[params]
+  favicon = ""
+  description = "Nyt album, ude nu!"
+  facebook = "https://facebook.com"
+  twitter = "https://twitter.com/a_burchardt"
+  instagram = "https://instagram.com/aburchardt"
+  youtube = "https://youtube.com"
+  github = "https://github.com/aburchardt"
+  linkedin = "https://linkedin.com"
+  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  featured_image = "/img/guldglenn.jpg"
+  recent_posts_number = 4
