--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "GuldGlenn"
-baseURL = "http://aburchardt.dk/kea/3_semester/"
+baseURL = "http://aburchardt.dk/kea/3_semester/hugoportfolio/"
 languageCode = "da-dk"
 theme = "gohugo-theme-ananke"
 
